deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snmp-olt-zte
  namespace: misindo-snmp-olt-zte-prod
  labels:
    app.kubernetes.io/name: snmp-olt-zte
    app: snmp-olt-zte
spec:
  selector:
    app.kubernetes.io/name: snmp-olt-zte
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  type: ClusterIP
